--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 .page-content {
   padding: 24px;
+  width: 50vw;
+  border: 10px solid black;
+  background-color: coral;
 }
 .multiple-selector {
   display: flex;
