--- a/style.css
+++ b/style.css
@@ -9,14 +9,9 @@
   justify-content: space-between; */
 }
 label {
-  float: left;
   width: 200px;
   padding-right: 24px;
-}
-
-input {
-  float: left;
-  width: calc(100% - 200px);
+  padding-left: 10px;
 }
 
 /* body {
